apps/audiobookshelf/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  serviceName: audiobookshelf
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/audiobookshelf/config"
            server: 10.10.20.10
        - name: books
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/audiobookshelf/data/books"
            server: 10.10.20.10
        - name: metadata
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/audiobookshelf/data/metadata"
            server: 10.10.20.10
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.37.1@sha256:581d68b2a6fc7ebf58d81c878a9f387cbbc0d88ac9d37b298b9cee10168af85b
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "4Gi"
              cpu: "1"
          readinessProbe:
            httpGet:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 3
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: books
              mountPath: /books
              readOnly: false
            - name: metadata
              mountPath: /metadata
              readOnly: false
