apps/audiobookshelf/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  type: ClusterIP
  selector:
    app: audiobookshelf
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
