apps/audiobookshelf/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
spec:
  hostnames:
    - audiobookshelf.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: audiobookshelf
      namespace: audiobookshelf
      sectionName: audiobookshelf
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: audiobookshelf
          port: 80
          weight: 1
