apps/audiobookshelf/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "5G"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - audiobookshelf.nahue.ar
      secretName: audiobookshelf
  rules:
    - host: audiobookshelf.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
